--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jimp": "0.2.27",
     "kerberos": "0.0.23",
     "mailgun-js": "0.7.7",
-    "method-override": "2.3.5",
+    "method-override ~> 2.3.10,
     "mongodb": "2.2.28",
     "newrelic": "1.38.2",
     "parse": "1.9.2",
